# spa-transpose-cv

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CO2_METHODOLOGY.md  Makefile  PLAN.md  PLAN_V3.md  SPEC.md  SPEC_V2.md  SPEC_VOL.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
core/python/: README.md  pyproject.toml
core/python/copilot/: __init__.py  http.py  instructions.md  local_harness.py  manifest.json  package.py  runtime.py
core/python/cv_transpose_core/: __init__.py  contract.py  docx.py  extract.py  manifest.py  normalize.py  profile.py  prompts.py  render.py  transpose.py  types.py  validate.py
core/python/cv_transpose_marketplace/: __init__.py  assets.py  copilot.py  gemini.py  http.py  identity.py  jwt.py  report.py  runtime.py  settings.py  types.py  validation.py
core/python/tests/: conftest.py  test_copilot_runtime_scaffold.py  test_equivalence.py  test_extract.py  test_manifest_contract.py  test_marketplace_assets.py  test_marketplace_copilot.py  test_marketplace_gemini.py  test_marketplace_gemini_adk_agent.py  test_marketplace_gemini_adk_bundle.py  test_marketplace_gemini_adk_cli.py  test_marketplace_gemini_adk_function_declaration.py  test_marketplace_gemini_adk_model_config.py  test_marketplace_gemini_adk_runner.py  test_marketplace_gemini_adk_runtime.py  test_marketplace_gemini_adk_tool.py  test_marketplace_http_adapters.py  test_marketplace_identity.py  test_marketplace_jwt.py  test_marketplace_offline_harnesses.py  test_marketplace_runtime.py  test_marketplace_runtime_contracts.py  (+7 more)
(+211 files in other folders)
