[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-transpose-core"
version = "0.2.0"
description = "Python port of CV Transpose core"
requires-python = ">=3.12"
dependencies = [
  "lxml>=5.2,<6",
  "pypdf>=4.2,<6",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cv_transpose_core*"]
